crates/goby-cli/tests/fixtures/unresolved_name_error_expected.txt
crates/goby-cli/tests/fixtures/unresolved_name_error_input.gb:5:3: error: unknown function or constructor `map` in 'main'
5 |   map [1, 2] print
  |   ^^^
